class FlightOperations:
    @staticmethod
    def plan_route(start, destination):
        print(f"Route planned: {start} -> {destination}.")

    @staticmethod
    def ensure_safety():
        print("Safety procedures completed.")