class InflightService:
    @staticmethod
    def serve_meal():
        print("Serving meals to passengers.")

    @staticmethod
    def serve_drinks():
        print("Serving drinks to passengers.")