class Crew:
    def __init__(self, name, role):
        self.name = name
        self.role = role