class Ticket:
    def __init__(self, flight_number, seat):
        self.flight_number = flight_number
        self.seat = seat